Fixed navbar z-index

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,7 +29,7 @@ html, body, .wrapper {
 	font-size: 25vw;
 }
 
-#header {
+.navbar {
 	z-index: 9999;
 }
 
